Added service page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,45 @@
     <li>To showcase the campus through images and galleries</li>
     <li>To guide new students and visitors</li>
     <li>To improve communication within the campus community</li>
-
 </ul>
+
+<!--Services-->
+<div class="#services">
+    <h1> Services</h1>
+    <p> Here are the services we offer</p>
+    <div class="card">
+        <img src="class.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+    <h4><b>Classes</b></h4> 
+    <p>We have classes which allows students to focus</p> 
+  </div>
+
+<img src="library.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+    <h4><b>Library</b></h4> 
+    <p>We have libraries which allows student to make research  </p> 
+  </div> 
+  
+  <img src="health center.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+    <h4><b>Health centers</b></h4> 
+    <p>We all get sick, that's why we've got our students covered  </p> 
+  </div> 
+  
+  <img src="playground.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+    <h4><b>Leisure</b></h4> 
+    <p>After courses, we relax through games </p> 
+  </div>
+  
+  <img src="administration.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+    <h4><b>Administration Offices</b></h4> 
+    <p>We help out our students as well as staffs  </p> 
+  </div>
+
+</div>
+
 
     </div>
     <footer class="last">
