Added locations section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="card">
         <img src="class.jpg" alt="Avatar" style="width:100%">
         <div class="container">
-    <h4><b>Classes</b></h4> 
-    <p>We have classes which allows students to focus</p> 
+    <h4><b>Lectures</b></h4> 
+    <p>We our students with invaluable skills</p> 
   </div>
 
 <img src="library.jpg" alt="Avatar" style="width:100%">
@@ -66,24 +66,110 @@
     <p>We all get sick, that's why we've got our students covered  </p> 
   </div> 
   
-  <img src="playground.jpg" alt="Avatar" style="width:100%">
-        <div class="container">
-    <h4><b>Leisure</b></h4> 
-    <p>After courses, we relax through games </p> 
-  </div>
   
-  <img src="administration.jpg" alt="Avatar" style="width:100%">
+  
+  <img src="labcomp.jpg" alt="Avatar" style="width:100%">
         <div class="container">
-    <h4><b>Administration Offices</b></h4> 
-    <p>We help out our students as well as staffs  </p> 
+    <h4><b>Computer Labs</b></h4> 
+    <p>Students are equipped with technological skills as well </p> 
   </div>
+</div>
+
+<!--Locality&Gallery-->
+<div class="loc">
+    <h1> Locations</h1>
+    <p>In this section we will show you where we are located, some of our daily activities and what our campus looks like</p>
+</div>
+
+<main>
+        <section class="locality">
+            <h2>Campus Locality</h2>
+
+            <!-- Address -->
+            <h3>Campus Address</h3>
+            <p>
+                ABC Campus is located in Kicukiro District, Kigali City, Rwanda.
+                The campus is easily accessible and situated in a student-friendly environment.
+            </p>
+
+            <!-- Description -->
+            <h3>Location Description</h3>
+            <p>
+                The campus is located near major roads and public transport routes,
+                making it convenient for students, staff, and visitors.
+                The surrounding area is safe and equipped with essential facilities.
+            </p>
+
+            <!-- Map -->
+            <h3>Find Us on the Map</h3>
+            <div class="map">
+                <iframe 
+                    src="https://www.google.com/maps/@-1.967548,30.0549678,2628m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI2MDEyNi4wIKXMDSoASAFQAw%3D%3D"
+                    width="100%" 
+                    height="300" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy">
+                </iframe>
+            </div>
+
+            <!-- Directions -->
+            <h3>How to Reach the Campus</h3>
+            <ul>
+                <li>Accessible via main city roads</li>
+                <li>Public buses and motorcycle taxis available</li>
+                <li>Close to major landmarks and bus stops</li>
+            </ul>
+
+            <!-- Nearby Facilities -->
+            <h3>Nearby Facilities</h3>
+            <p>
+                The campus is surrounded by hostels, shops, restaurants, and health facilities,
+                making student life convenient and comfortable.
+            </p>
+        </section>
+    </main>
+<!--Our gallery-->
+<h1>Our Gallery</h1>
+<div class="gallery">
+
+<div class="gallery-item">
+  <a target="_blank" href="campus.jpg">
+    <img src="campus.jpg" alt="Cinque Terre" width="600" height="400">
+  </a>
+  <div class="desc">Campus</div>
+</div>
+
+<div class="gallery-item">
+  <a target="_blank" href="playground.jpg">
+    <img src="playground.jpg" alt="Forest" width="600" height="400">
+  </a>
+  <div class="desc">Green Forest</div>
+</div>
+
+<div class="gallery-item">
+  <a target="_blank" href="administration.jpg">
+    <img src="administration.jpg" alt="Northern Lights" width="600" height="400">
+  </a>
+  <div class="desc">Northern Lights</div>
+</div>
+
+<div class="gallery-item">
+  <a target="_blank" href="hostel.jpg">
+    <img src="hostel.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">Mountains</div>
+</div>
 
 </div>
+
+    
+
 
 
     </div>
     <footer class="last">
-        <p>& 2026 Campus Information. All rights reserved</p>
+        <p>&copy; 2026 Campus Information. All rights reserved</p>
     </footer>
 </body>
 </html>
