Added announcement section

--- a/index.html
+++ b/index.html
@@ -160,10 +160,34 @@
   </a>
   <div class="desc">Mountains</div>
 </div>
-
 </div>
 
-    
+<!--Announcements--> 
+<section class="announcements">
+    <h2>Announcements & Notices</h2>
+
+    <p class="section-desc">
+        This section displays important campus announcements and notices
+        to keep students informed about academic and campus activities.
+    </p>
+
+    <!-- Sticky Notice -->
+    <div class="notice sticky">
+        <h3>⚠️ Registration Deadline</h3>
+        <p>All students must complete semester registration by February 10.</p>
+    </div>
+
+    <!-- Normal Notices -->
+    <div class="notice">
+        <h3>Mid-Semester Exams</h3>
+        <p>Mid-semester examinations will begin on March 5.</p>
+    </div>
+
+    <div class="notice">
+        <h3>Campus Event</h3>
+        <p>A student leadership workshop will be held this Friday.</p>
+    </div>
+</section>
 
 
 
