Added display section

--- a/index.html
+++ b/index.html
@@ -189,10 +189,29 @@
     </div>
 </section>
 
+<!--Display section -->
+<section class="display-behavior">
+    <h2>Display Behavior</h2>
 
+    <p class="section-desc">
+        This section demonstrates different ways content can be displayed
+        or hidden on a webpage using CSS display properties.
+    </p>
 
+    <div class="box visible-box">
+        I am visible on the page.
     </div>
-    <footer class="last">
+
+    <div class="box hidden-box">
+        You should not see this content.
+    </div>
+
+    <div class="box transparent-box">
+        I am transparent but still take up space.
+    </div>
+</section>
+
+<footer class="last">
         <p>&copy; 2026 Campus Information. All rights reserved</p>
     </footer>
 </body>
