Added announcement and display sections

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
     <title>Campus Information</title>
 </head>
 <body>
     <header class="header-cotainer">
         <div class="logo">
-            <h1>University of Gitega</h1>
+            <h1>Campus Information</h1>
         </div>
         <div class="nav-bar">
             <ul class="nav">
@@ -76,11 +77,12 @@
 </div>
 
 <!--Locality&Gallery-->
+<section id="locality">
 <div class="loc">
     <h1> Locations</h1>
     <p>In this section we will show you where we are located, some of our daily activities and what our campus looks like</p>
 </div>
-
+</section>
 <main>
         <section class="locality">
             <h2>Campus Locality</h2>
