--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="class.jpg" alt="Avatar" style="width:100%">
         <div class="container">
     <h4><b>Lectures</b></h4> 
-    <p>We our students with invaluable skills</p> 
+    <p>We equip our students with invaluable skills</p> 
   </div>
 
 <img src="library.jpg" alt="Avatar" style="width:100%">
@@ -146,21 +146,21 @@
   <a target="_blank" href="playground.jpg">
     <img src="playground.jpg" alt="Forest" width="600" height="400">
   </a>
-  <div class="desc">Green Forest</div>
+  <div class="desc">Playground</div>
 </div>
 
 <div class="gallery-item">
   <a target="_blank" href="administration.jpg">
     <img src="administration.jpg" alt="Northern Lights" width="600" height="400">
   </a>
-  <div class="desc">Northern Lights</div>
+  <div class="desc">Administation Office</div>
 </div>
 
 <div class="gallery-item">
   <a target="_blank" href="hostel.jpg">
     <img src="hostel.jpg" alt="Mountains" width="600" height="400">
   </a>
-  <div class="desc">Mountains</div>
+  <div class="desc">Hostels</div>
 </div>
 </div>
 
