Changes on announcement section

--- a/index.html
+++ b/index.html
@@ -185,57 +185,41 @@
 </div>
 </div>
 </section>
-<!--Announcements--> 
+
+<!-- Announcements Section -->
 <section id="news">
-<section class="announcements">
-    <h1>Announcements & Notices</h1>
+    <div class="announcements">
+        <h1>Announcements & Notices</h1>
 
-    <p class="section-desc">
-        This section displays important campus announcements and notices
-        to keep students informed about academic and campus activities.
-    </p>
+        <p class="section-desc">
+            Important campus announcements and notices for students and visitors.
+        </p>
 
-    <!-- Sticky Notice -->
-    <div class="notice sticky">
-        <h3>⚠️ Registration Deadline</h3>
-        <p>All students must complete semester registration by February 10.</p>
-    </div>
+        <div class="announcements-container">
 
-    <!-- Normal Notices -->
-    <div class="notice">
-        <h3>Mid-Semester Exams</h3>
-        <p>Mid-semester examinations will begin on March 5.</p>
-    </div>
+            <!-- Sticky Notice (Must stay visible) -->
+            <div class="notice sticky-notice">
+                <h3>⚠️ Registration Deadline</h3>
+                <p>All students must complete semester registration by February 10.</p>
+            </div>
 
-    <div class="notice">
-        <h3>Campus Event</h3>
-        <p>A student leadership workshop will be held this Friday.</p>
-    </div>
-</section>
-</section> 
-<!--Display section -->
-<section id="conduct">
-<section class="display-behavior">
-    <h1>Display Behavior</h1>
+            <!-- Normal Notices -->
+            <div class="notice">
+                <h3>Mid-Semester Exams</h3>
+                <p>Mid-semester examinations will begin on March 5.</p>
+            </div>
 
-    <p class="section-desc">
-        This section demonstrates different ways content can be displayed
-        or hidden on a webpage using CSS display properties.
-    </p>
+            <div class="notice">
+                <h3>Campus Event</h3>
+                <p>A student leadership workshop will be held this Friday.</p>
+            </div>
 
-    <div class="box visible-box">
-        I am visible on the page.
-    </div>
-
-    <div class="box hidden-box">
-        You should not see this content.
-    </div>
-
-    <div class="box transparent-box">
-        I am transparent but still take up space.
+        </div>
     </div>
 </section>
-</section>
+
+
+
 <footer class="last">
         <p>&copy; 2026 Campus Information. All rights reserved</p>
     </footer>
