--- a/index.html
+++ b/index.html
@@ -218,10 +218,55 @@
     </div>
 </section>
 
+<!-- Display Behavior Section -->
+<section id="conduct">
+    <div class="display-behavior">
+        <h1>Display Behavior</h1>
+
+        <p class="section-desc">
+            This section demonstrates different ways content can be displayed,
+            hidden, or removed from the page using CSS display properties.
+        </p>
+
+        <!-- Visible element -->
+        <div class="box visible-box">
+            I am visible on the page.
+        </div>
+
+        <!-- Completely hidden element -->
+        <div class="box hidden-box">
+            You should not see this content.
+        </div>
+
+        <!-- Transparent but space remains -->
+        <div class="box transparent-box">
+            I am transparent but still take up space.
+        </div>
+
+        <!-- Responsive hidden element -->
+        <div class="box responsive-box">
+            I will disappear on small screens (responsive behavior).
+        </div>
+    </div>
+</section>
 
 
-<footer class="last">
-        <p>&copy; 2026 Campus Information. All rights reserved</p>
-    </footer>
+
+<!--Footer-->
+<footer class="footer">
+    <div class="footer-container">
+
+        <div class="footer-left">
+            <h3>Campus Information</h3>
+            <p>Providing students with essential campus information and updates.</p>
+        </div>
+
+        <div class="footer-right">
+            <p>&copy; 2026 Campus Information. All rights reserved.</p>
+        </div>
+
+    </div>
+</footer>
+
 </body>
 </html>
